✨ Design highlights: Purple gradient background (from #667eea to #764ba2) for a modern, eye-catching look Card-based layout with smooth hover animations that lift cards up when you hover over them Responsive grid design that automatically adjusts to different screen sizes Smooth fade-in animations when the page loads Emoji icons for visual appeal and quick identification of each section Professional typography using Segoe UI font family Mobile-friendly design that works on all devices

--- a/DänielEbrahimzadehTheme5.html
+++ b/DänielEbrahimzadehTheme5.html
@@ -44,6 +44,7 @@
         <header class="text-center mb-8">
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Theme 5: Project Scheduling and Tool Analysis</h1>
             <p class="text-lg text-slate-600 mt-2">Analysis for "Course Website Development" using CPM and ProjectLibre</p>
+            <p class="text-base text-teal-600 mt-1 font-medium">by Däniel Ebrahimzadeh</p>
         </header>
 
         <!-- Navigation -->
