--- a/DänielEbrahimzadehTheme3.html
+++ b/DänielEbrahimzadehTheme3.html
@@ -44,6 +44,7 @@
         <header class="text-center mb-8">
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Project Management Assignment</h1>
             <p class="text-lg text-slate-600 mt-2">Interactive Plan for a House Construction Project in Vaasa</p>
+            <p class="text-base text-teal-600 mt-1 font-medium">by Däniel Ebrahimzadeh</p>
         </header>
 
         <!-- Navigation -->
